Add series release state endpoint
